--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="programs"></div>
+    <div id="filter"></div>
     <div id="activities"></div>
     <!--
       This HTML file is a template.
